src/app/styles/Footer.scss
$footer-background: #E5E5E5;

.footer {
  align-items: center;
  justify-content: space-between;
  background-color: $footer-background;
  height: 96px;
  margin-top:auto; 
  &__contacts {
    gap: 51px;
    span {
      margin-left: 9px;
    }
  }
}

